--- a/style.css
+++ b/style.css
@@ -126,6 +126,7 @@ button {
   width: 6ch;
   z-index: 9999;
   border-radius: 30px;
+  cursor: pointer;
 }
 
 #hold {
@@ -134,6 +135,7 @@ button {
   width: 6ch;
   z-index: 9999;
   border-radius: 30px;
+  cursor: pointer;
 }
 
 
@@ -255,6 +257,7 @@ button {
   justify-self: center;
   font-size: 20px;
   background-color: black;
+  cursor: pointer;
 }
 
 select{
@@ -279,6 +282,7 @@ select:focus {
   border: 1px solid white;
   border-radius:10px;
   width: 5ch;
+  cursor: pointer;
 }
 
 
